# video-finder-ziqi

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  to_ziqi.md
src/video_finder/: __init__.py  cli.py  config.py  graph.py  models.py
src/video_finder/nodes/: cleanup_uploaded_image.py  collect_youtube.py  enrich_youtube_metadata.py  extract_frames.py  ocr_frames.py  rank_candidates.py  search_lens.py  select_query_frame.py  text_search.py  upload_image.py
src/video_finder/services/: google_custom_search.py  image_hosting.py  llm_search.py  ocr.py  serpapi.py  video_compare.py  youtube.py  youtube_data_api.py
src/video_finder/utils/: files.py  images.py
tests/: google_lens_api_return.json  test_graph_dry_run.py  test_rank.py  test_serpapi_json.py  test_youtube.py  test_youtube_data_api.py
