[project]
name = "video-finder-ziqi"
version = "0.1.0"
description = "CLI agent that finds likely original YouTube videos for face-tampered clips."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "httpx>=0.27.0",
  "imagehash>=4.3.1",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "opencv-python-headless>=4.10.0",
  "pillow>=10.4.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "scikit-image>=0.24.0",
  "typer>=0.12.5",
]

[project.optional-dependencies]
ocr = [
  "paddleocr>=2.8.0",
  "paddlepaddle>=2.6.0",
]
easyocr = [
  "easyocr>=1.7.2",
]
cloudinary = [
  "cloudinary>=1.41.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
video-finder = "video_finder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_finder"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
